--- a/assets/css/stylus/custom-scroll-style.styl
+++ b/assets/css/stylus/custom-scroll-style.styl
@@ -1,4 +1,5 @@
-/*::-webkit-scrollbar
+//Custom scroll for -webkit browser
+::-webkit-scrollbar
     width: 10px
 ::-webkit-scrollbar-track
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
@@ -7,4 +8,4 @@
 ::-webkit-scrollbar-thumb
    border-radius: 10px
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5)
-   background-color: #555555*/
+   background-color: #555555
