--- a/assets/css/stylus/work-content.styl
+++ b/assets/css/stylus/work-content.styl
@@ -14,7 +14,7 @@
 				height: calc(100%/3 - 2px) !important
 				width: 100% !important
 				div
-					margin: -15% auto !important
+					margin: -28% auto !important
 		li
 			width: calc(100%/3 - 20px)
 			height: 100%
